# HPLCreader

./: LICENSE  README.md  pyproject.toml
example/: standard.280.json  standard.tsv
src/HPLCreader/: hplc.py
web/: app.js  index.html  styles.css
